      file should be in was reversed when a file was under /usr/share
      but had /lib/ somewhere in the path name. (CNY-1155)
    * cvc add will now refuse to add symbolic links that are absolute,
      dangling, pointing to files outside of the current directory or pointing
      to files that are not tracked by Conary. (CNY-468)

  o Bug Fixes:
    * Builds that resulted in changesets containg the same file
      in different locations would fail to commit if the files differed
      only by mtime. (CNY-1114)
    * Builds that resulted in changesets containg the same file
      in different locations would fail to commit if the files differed
      only by mtime. (CNY-1114)
    * The mirror script now correctly handles the cases where
      the PathIdConflict erros are raised by certain source repositories
      during mirroring (CNY-426)
    * The mirror script now can correctly mirror removed troves when a
      removed and regular versions appear in the same mirror chunk.
    * Perl dependency strings containing double colons are now properly
      accepted on the command line. (CNY-1132)
    * cvc stat now correctly displays the usage information when extra
      arguments are specified. (CNY-1126)
    * conary update --apply-critical will now behave corractly if the update
      job contains (besides the conary package which is the source of critical
      updates) linked troves. Linked troves are troves with overlapping paths.
      (CNY-1115)
    * A GET request to the "changeset" URL of a repository server that
      does not supply any arguments no longer results in an Internal
      Server Error.  The repository can be configured to send email to
      an email address with debugging information. (CNY-1142)
    * When checking to make sure that the URL used to upload a
      changeset matches the repository base URL, both URLs are now
      normalized before the comparison is made. (CNY-1140)